# imx-video-to-texture

./: CMakeLists.txt  LICENSE.txt  README.md  SW-Content-Register.txt
cpp/: gltexturerenderer.cpp  gltexturerenderer.hpp  gstplayer.cpp  gstplayer.hpp  main.cpp  mediascreenshot.cpp  mediascreenshot.hpp  mediastream.cpp  mediastream.hpp
licenses/: BSD-3-Clause.txt  LGPL-3.0-Only.txt
qml/: MediaControls.qml  MediaThumbnails.qml  Style.qml  main.qml
qrc/: icons.qrc  image.qrc  qml.qrc
